# exp-game

./: ABOUT.md  CMakeLists.txt  Makefile  README.md
include/: config.h  init.h
include/funcs/: rand.h
include/gfx/: cam.h  cinf.h  cube.h  frustum.h  graphics.h  quad.h  text.h  textures.h
include/gl/: tf.h
include/phys/: collison.h
include/player/: ctrls.h
include/world/: chunks.h  dnloop.h  map.h
src/: core.cpp  init.cpp  render.cpp
src/debug/: out.cpp
src/gfx/: chunk_inf.cpp  cube.cpp  frustum.cpp  quad.cpp  textrender.cpp  textures.cpp
src/phys/: collison.cpp
src/player/: block_handle.cpp
src/world/: chunks.cpp  dnloop.cpp  map.cpp
